2015-01-22  Uwe Schulzweida

	* Version 1.6.8 released

2015-01-06  Uwe Schulzweida

	* intersection: use function sqrt(x) if sqrtl(x) is missing

2015-01-05  Uwe Schulzweida

	* New operator: yseasadd - Add multi-year seasonal time series
	* New operator: yseassub - Subtract multi-year seasonal time series
	* New operator: yseasmul - Multiply multi-year seasonal time series
	* New operator: yseasdiv - Divide multi-year seasonal time series

2014-12-26  Uwe Schulzweida

	* sinfo: limit length of model and institute to CDI_MAX_NAME (bug fix)

2014-12-19  Uwe Schulzweida

	* Seaspctl: changed timestat_date to mean
	* Seaspctl: added support for env. CDO_TIMESTAT_DATE
	* Seasstat: changed timestat_date to mean
	* Timpctl: changed timestat_date to mean
	* Timpctl: added support for env. CDO_TIMESTAT_DATE
	* Timstat: changed timestat_date to mean

2014-12-18  Uwe Schulzweida

	* Timselpctl: changed timestat_date to mean
	* Timselpctl: added support for env. CDO_TIMESTAT_DATE
	* Timselpctl: last output time step is written two times (bug fix)
	* Timselstat: changed timestat_date to mean

2014-12-16  Uwe Schulzweida

	* intlevel3d: works only for regular grids, grid coordinate check disabled (bug fix)

2014-12-15  Uwe Schulzweida

	* Seasstat: added support for env. CDO_TIMESTAT_DATE
	* Timselstat: added support for env. CDO_TIMESTAT_DATE

2014-12-14  Uwe Schulzweida

	* Timstat: added support for env. CDO_TIMESTAT_DATE

2014-12-13  Uwe Schulzweida

	* Runstat: added time bounds

2014-12-12  Uwe Schulzweida

	* using CDI library version 1.6.7
	* Version 1.6.7 released

2014-12-11  Uwe Schulzweida

	* intlevel3d: does not work (bug fix)

2014-12-03  Uwe Schulzweida

	* added File.test.in to test all file formats

2014-12-02  Uwe Schulzweida

	* GRIB_API: segfaults when writing grib2 files [Bug #5351]

2014-11-27  Uwe Schulzweida

	* using CDI library version 1.6.6
	* Version 1.6.6 released

2014-11-25  Uwe Schulzweida

	* merge: check number of timesteps [Bug #5338]
